--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "html2canvas": "^1.4.1",
     "qr-scanner": "^1.4.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.4",
     "victory": "^37.0.2"
   },
   "devDependencies": {
