--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "dom-to-image-more": "^3.3.0",
     "html2canvas": "^1.4.1",
     "qr-scanner": "^1.4.2",
     "qrcode.react": "^3.1.0",
